# nice-lang

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.nc
nice/: __main__.py  compiler.py  hello.nc  tempCodeRunnerFile.py
nice/nice_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: nice.py
